--- a/processing-files.ipynb
+++ b/processing-files.ipynb
@@ -10,20 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "84a10d95-e4ba-4ee0-b925-9bcf01ba148e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "011ef1c1-d5e9-44e5-ae9c-17152aa5f6fc",
    "metadata": {},
    "outputs": [],
@@ -36,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "cf206d32-87c9-468d-81d1-be97c4c19f35",
    "metadata": {},
    "outputs": [],
@@ -47,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "8532f5fb-b158-4325-a777-d8003f687553",
    "metadata": {},
    "outputs": [
@@ -65,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "fa1670d7-7657-426e-ac7a-c9540bbcb5bc",
    "metadata": {},
    "outputs": [],
@@ -87,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "c805bfb0-28a6-4067-9096-550d7c395645",
    "metadata": {},
    "outputs": [],
@@ -97,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "5c73ad7e-eb95-4ec7-9f2f-2b69ce0d2979",
    "metadata": {},
    "outputs": [
@@ -107,7 +105,7 @@
        "'                           \\u202dBBC Arabic\\u202c - \\u202eالشرق الأوسط\\u202c - \\u202eمقتل العشرات في هجوم انتحاري قرب كركوك\\u202c                          content=\"مقتل واصابة العشرات في انفجار شاحنة مفخخة قرب مسجد شيعي في مدينة كركوك الواقعة شمالي العراق.\" />                           الرئيسية          الشرق الأوسط   \\t\\t  العالم   \\t\\t  شارك برأيك   \\t\\t  اقتصاد وأعمال   \\t\\t  منوعات  \\t \\t\\t  علوم وتكنولوجيا   \\t\\t  رياضة   \\t\\t  راديو وتلفزيون                  مقتل العشرات في هجوم انتحاري قرب كركوك                 قالت الشرطة العراقية ان 64 شخصا على الاقل قتلوا في انفجار شاحنة مفخخة في مدينة كركوك شمال العراق.               وقال المسؤولون العراقيون ان 160 شخصا اخرين جرحوا في التفجير الذي وقع قرب مسجد شيعي في بلدة تازة.               وسويت اكثر من عشرة منازل مجاورة لمكان الانفجار بالارض كما اصيب المسجد ايضا بشكل بالغ.               وياتي الهجوم الاخير قبل ايام من الموعد المقرر لانسحاب القوات الامريكية من المدن العراقية، مما يزيد القلق من احتمال تصاعد اعمال العنف.               وقبل التفجير بساعات كان رئيس الوزراء العراقي نوري المالكي يعلن ان الانسحاب سيتم كما هو مقرر ووصفه بانه \"نصر عظيم\".               واضاف: \"لا تيأسوا ان وقع خرق امني هنا او هناك\".               ويقول مراسل بي بي سي في بغداد جيم ميور ان التفجير يعد اكثر الهجمات دموية في العراق العام الجاري.               ووقع الانفجار فيما كان المصلون يغادرون مسجد الرسول المزدحم، الذي يتبع الاقلية التركمانية في المدينة في بلدة تازة جنوب كركوك، بعد صلاة الظهر.               ولشدة الانفجار خلف حفرة عميقة في الارض.               ونقل الضحايا الى مستشفى ازادي الرئيسي في كركوك، الذي شهد حالة فوضى مع نقل الضحايا الغارقين في دمائهم، وبينهم اطفال، الى اجنحة المستشفى.               وكانت كركوك، الواقعة على بعد 250 كيلومترا من بغداد، شهدت انفجارين انتحاريين الشهر الماضي قتل فيهما 14 شخصا.               وتعد مدينة كركوك مركز الصناعة النفطية العراقية في الشمال وتضم خليطا من الاكراد والعرب والمسيحيين والتركمان.               وتخطط الولايات المتحدة لسحب قواتها من المدن والبلدات الرئيسية بحلول 30 يونيو ومن المقرر ان تنهي العمليات الحربية في انحاء العراق بحلول سبتمبر 2010 تاركة الامر لقوات الامن العراقية .               وهناك مخاوف من ان يحاول المتمردون الاستفادة من الانسحاب مع ان قادة البلاد يقولون ان القوات العراقية قادرة على تولي الامن الداخلي دون مساعدة من القوات الامريكية.                         '"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "1f77b6b8-5e9e-4b5a-9437-9eb02e29314a",
    "metadata": {},
    "outputs": [
@@ -144,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "4e5f0ab7-fe1c-4cdb-a398-1cbe1e88a086",
    "metadata": {
     "scrolled": true
@@ -158,7 +156,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "id": "96e0243f-ab1b-45e8-9f81-e2194e95ddeb",
    "metadata": {},
    "outputs": [],
