test new branch

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -1280,8 +1280,167 @@
    "id": "34b996bd-38b0-4f97-ae14-89fd83033bed",
    "metadata": {},
    "source": [
-    "# Feature Engineer"
+    "# Feature Engineering"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "9dafe056-6a41-4335-a8b4-42e162ade030",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Body</th>\n",
+       "      <th>category</th>\n",
+       "      <th>stop_words</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>‭BBC Arabic‬ - ‮الش...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>‭BBC Arabic‬ - ‮الش...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>‭BBC Arabic‬ - ‮الش...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>‭BBC Arabic‬ - ‮الش...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>‭BBC Arabic‬ - ‮الش...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4753</th>\n",
+       "      <td>‭BBC Arabic‬ - ‮منو...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4755</th>\n",
+       "      <td>‭BBC Arabic‬ - ‮...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4757</th>\n",
+       "      <td>‭BBC Arabic‬ - ‮منو...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4759</th>\n",
+       "      <td>‭BBC Arabic‬ - ‮منو...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4761</th>\n",
+       "      <td>‭BBC Arabic‬ - ‮...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4255 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   Body  category  stop_words\n",
+       "0                                ‭BBC Arabic‬ - ‮الش...         1          56\n",
+       "1                                ‭BBC Arabic‬ - ‮الش...         1          21\n",
+       "2                                ‭BBC Arabic‬ - ‮الش...         1          41\n",
+       "3                                ‭BBC Arabic‬ - ‮الش...         1           6\n",
+       "4                                ‭BBC Arabic‬ - ‮الش...         1          23\n",
+       "...                                                 ...       ...         ...\n",
+       "4753                             ‭BBC Arabic‬ - ‮منو...         6          29\n",
+       "4755                                ‭BBC Arabic‬ - ‮...         6          26\n",
+       "4757                             ‭BBC Arabic‬ - ‮منو...         6          13\n",
+       "4759                             ‭BBC Arabic‬ - ‮منو...         6          17\n",
+       "4761                                ‭BBC Arabic‬ - ‮...         6          40\n",
+       "\n",
+       "[4255 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "d10605c9-b09e-4e71-a931-1037a18823b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'                           \\u202dBBC Arabic\\u202c - \\u202eالشرق الأوسط\\u202c - \\u202eسؤال وجواب: ماذا حدث بعد الانتخابات الايرانية؟\\u202c                          content=\"اجابات عن اسئلة مطروحة عن الازمة التي نشأت عقب انتخابات الرئاسة في ايران.\" />                           الرئيسية          الشرق الأوسط   \\t\\t  العالم   \\t\\t  شارك برأيك   \\t\\t  اقتصاد وأعمال   \\t\\t  منوعات  \\t \\t\\t  علوم وتكنولوجيا   \\t\\t  رياضة   \\t\\t  راديو وتلفزيون                  سؤال وجواب: ماذا حدث بعد الانتخابات الايرانية؟                طرح الكثير من التساؤلات غداة ظهور نتائج الانتخابات الرئاسية الايرانية التي أججت مظاهرات واسعة واعمال عنف بين المحتجين على النتائج ورجال الامن. هنا بعضها:                 ما هي أوجه اعتراض معارضي أحمدي نجاد؟                 يقول معارضو الرئيس الإيراني إن الطريقة التي اعلنت بها النتائج كانت مثيرة للاستغراب. ففي كل الانتخابات السابقة، تم فرز الاصوات واعلان النتائج اقليما باقليم، لكن هذه المرة جاءت النتائج دفعات بملايين الاصوات كل مرة ونسب المرشحين فيها. كما لم تتغير نسب المرشحين في تلك المجموعات من الاصوات.  وان صحت تلك النتائج، يعني ذلك ان الرئيس محمود احمدي نجاد حقق نفس النتائج الايجابية في المناطق القروية والحضرية على حد سواء، كما يعني ان المرشحين الآخرين حصلوا على نفس النتائج الهزيلة في مناطقهم واقاليمهم.  ومن المعلوم ان احمدي نجاد ذو شعبية كبيرة في المناطق القروية لكن شعبيته متدنية للغاية في المدن.  كما يعرف ان المناطق التي تعيش فيها الكثير من الاقليات عادة ما تصوت لصالح المرشحين المعارضين للنظام وان أي مرشح غالبا ما يفوز في مسقط رأسه.  لكن المرة اختلف كثيرا هذه المرة. ولم تعط السلطات جوابا لاي من هذه التساؤلات التي رددها أنصار المرشح مير حسين موسوي.  صحيح ان الامر يثير الارتياب بحسب آراء محليين، لكن لا يعني بالضرورة ان الانتخابات شهدت عملية تزوير كبيرة.                 ما مدى تنظيم المعارضين لاحمدي نجاد؟                 المرشح الاصلاحي الخاسر في الانتخابات، مير حسين موسوي، ليس له منظمة تذكر. فقبل الترشح للانتخابات كان في تقاعد نسبي لمدة عشرين عاما. ورغم ان المنظمات الاصلاحية الثلاث في ايران اعلنت دعمها له في هذه الانتخابات، فهو لا يتزعمها. لكن هذه المنظمات التي تحظى بدعم وتنظيم محترمين تشكل نوعا من المعارضة المنظمة. وهي تحظى بشعبية كبيرة لدى طلاب الجامعات، وبامكانها تعبئة الآلاف باستخدام الانترنت ووسائل اخرى.  من المتوقع ان تستمر الاحتجاجات، فالاصلاحيون اصدروا بيانا يقولون فيه ان ما حدث في الانتخابات هو انقلاب.                 هل يحظى احمدي نجاد بدعم المرشد الاعلى للثورة المطلق؟                 لا يمكن سبر خبايا السياسة الايرانية، لكن حسب ما يظهر منها فان احمدي نجاد يحظى بدعم آية الله خامنئي الكامل. فقبل الانتخابات، عبر خامنئي عن دعمه له عدة مرات، قائلا انه افضل رئيس عرفته البلاد منذ الثورة، وان سياسته الخارجية صحيحة.  لم يحدث شيء يدل على تغير هذا الرأي، لا خلال الحملة الانتخابية ولا بعد اعلان النتائج، بل سارع خامنئي الى الترحيب بالنتائج، ولو انه دعا لاحقا مجلس الخبراء للنظر في مزاعم التزوير.                 هل تهدد الازمة منصب المرشد الاعلى او سمعته؟                 مصداقية خامنئي قد تكون على المحك، فقد تساءل رجل دين بارز ومحترم، وهو محسن كاديفار، عما جعل خامنئي يرحب بالنتائج فورا، حتى قبل ان يصدق عليها مجلس الخبراء رسميا.  كما سبق وتعرض خامنئي للانتقاد لقربه من احمدي نجاد، فينبغي على المرشد الاعلى للثورة ان يبقى فوق السياسة والحزبية.                 وماذا بعد؟ هل يمكن تهدئة الوضع؟                 أمام مجلس الخبراء عشرة ايام للتصديق على نتائج الانتخابات او رفضها والدعوة الى اجراء غيرها، وقد طلب من المرشحين الخاسرين توفير ادلة على حصول تزوير كما يدعون.  لكن ذلك قد يكون ضربة قاضية للرئيس والمرشد الاعلى، كما قد يسبب فوضى عارمة في البلاد، وبالتالي فالاحتمال الثاني ضعيف جدا.  ومن جهة اخرى، يصعب تصور ان المظاهرات ستهدأ لوحدها، بل اغلب الظن انها ستزداد حماسا خاصة بسبب الاجراءات الامنية المشددة ورد فعل السلطات الامنية.  يعتبر المرشد الاعلى للثورة في ايران فوق القانون، وقد يصدر قرارا يكون حلا وسطا لهذه الازمة بدعوى ان البلاد او الدين في خطر.  للختام، المجتمع الايراني منقسم جدا سواء سياسيا او اقتصاديا، واغلب الظن ان هذا النوع من الاحتجاجات كان ليحدث مهما كانت نتائج الانتخابات.                           '"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Body'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b0e2410-962a-4a68-b435-fb81e46d1dc0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
